--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
   filter: invert(100);
 }
 
+
 .container {
   width: auto;
   max-width: 680px;
@@ -18,4 +19,48 @@
 
 .footer {
   background-color: #f5f5f5;
+}
+
+.overview {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.overviewText {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.overviewTextCentered {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.overviewButton {
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.overviewImage {
+  filter: brightness(80%);
+  width: 100%;
+  margin: 0;
+  padding: 0
+}
+
+.overviewImageDark {
+  filter: brightness(35%);
+  width: 100%;
+  margin: 0;
+  padding: 0
+}
+
+.yellow-color{
+  color: #FFCF00;
 }
