--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+.carousel-control-prev-icon {
+ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23FFCF00' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23FFCF00' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
 .bar-blue {
   background-color: #003891;
 }
@@ -7,9 +14,25 @@
 }
 
 .white-icon {
-  filter: invert(100);
+  filter: invert(100%);
+}
+.white-icon-hoverable {
+  filter: invert(99%) sepia(4%) saturate(125%) hue-rotate(66deg) brightness(111%) contrast(100%);
+  transition: 0.2s;
 }
 
+.white-icon-hoverable:hover {
+  width: 60px;
+  filter: invert(15%) sepia(96%) saturate(4496%) hue-rotate(357deg) brightness(90%) contrast(98%);
+}
+
+.nav-link {
+  border-radius: 5px;
+  transition: 0.3s;
+}
+.nav-link:hover {
+  background-color: #E3170A;
+}
 
 .container {
   width: auto;
@@ -17,8 +40,139 @@
   padding: 0 15px;
 }
 
-.footer {
-  background-color: #f5f5f5;
+
+.overview {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.overviewText {
+  width: 100%;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.overviewTextCentered {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.overviewButton {
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.overviewImage {
+  filter: brightness(80%);
+  width: 100%;
+  margin: 0;
+  padding: 0
+}
+
+.overviewImageDark {
+  filter: brightness(35%);
+  width: 100%;
+  margin: 0;
+  padding: 0
+}
+
+
+.floating-icons {
+			/*las imágenes usadas tienen width de 48px*/
+      position:fixed;
+			width:100px;
+      height:205px;
+			top:0px;
+			right:0;
+			/*border:1px solid #000;*/
+			top:100%;
+			/*para poner height 192 deberíamos haber indicado en el reset de estilos font-size:0;*/
+			margin-top:-100px;
+}
+
+@keyframes WhatsAppIcon {
+  0%   {width: 80px;}
+  5%   {width: 78px;}
+  10%  {width: 76px;}
+  15%   {width: 74px;}
+  20%  {width: 72px;}
+  25%   {width: 70px;}
+  30%  {width: 68px;}
+  35%   {width: 66px;}
+  40%  {width: 64px;}
+  45%   {width: 62px;}
+  50%  {width: 60px;}
+  60% {width: 60px;}
+  65%   {width: 62px;}
+  70%  {width: 64px;}
+  75%   {width: 66px;}
+  80% {width: 68px;}
+  85%   {width: 70px;}
+  90%  {width: 72px;}
+  95%   {width: 74px;}
+  100% {width: 76px;}
+}
+
+@keyframes IconTooltip {
+  0%   {left: 200%}
+  5%   {}
+  10%  {left: -20%;}
+  15%   {}
+  20%  {}
+  25%   {}
+  30%  {}
+  35%   {}
+  40%  {}
+  45%   {}
+  50%  {}
+  60% {}
+  65%   {}
+  70%  {}
+  75%   {}
+  80% {}
+  85%   {}
+  90%  {left: -20%;}
+  95%   {}
+  100% {left: 200%;}
+}
+
+/* The element to apply the animation to */
+.animated-icon {
+  width: 80px;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  z-index: inherit;
+
+  animation-name: WhatsAppIcon;
+  animation-duration: 1.8s;
+  animation-iteration-count: infinite;
+  transform: translate(-50%, -50%);
+}
+
+.animated-icon:hover {
+  animation-play-state: paused;
+}
+
+.icon-tooltip {
+  background-color: #fff;
+  position: absolute;
+  top: -30%;
+  left: 200%;
+  border-radius: 10px;
+  width: auto;
+  height: auto;
+
+  animation-name: IconTooltip;
+  animation-duration: 10s;
+  animation-delay: 2s;
+  animation-iteration-count: 1;
 }
 
 .overview {
@@ -63,4 +217,31 @@
 
 .yellow-color{
   color: #FFCF00;
+}
+
+a.instagram-image >img {
+  transition: .3s ease;
+}
+.instagram-image > img:hover {
+  filter: brightness(75%);
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.contact-icon {
+  filter: invert(14%) sepia(70%) saturate(6673%) hue-rotate(359deg) brightness(91%) contrast(96%);
+  transition: .4s;
+}
+
+.contact-icon:hover {
+  filter: invert(17%) sepia(61%) saturate(3752%) hue-rotate(211deg) brightness(80%) contrast(103%);
+  width: 80px;
+}
+
+#map {
+  width: 100%;
+  height: 400px;
+  background-color: grey;
 }
